--- a/package.json
+++ b/package.json
@@ -9,15 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "5.0.0-rc.4",
+    "axios": "^1.5.1",
+    "flowbite": "^1.8.1",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^3",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "eslint-config-next": "13.5.4",
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
